# bsu-cs-projects

./: .gitignore  README.md
semester-1/Lab_cpp/L class CircularQueue/: main.cpp  queue.cpp  queue.h
semester-1/Lab_cpp/L class Stack/: main.cpp  stack.cpp  stack.h
semester-1/Lab_cpp/LAB_1/: problem1-5.cpp
semester-1/Lab_cpp/LAB_2/: prob_2_1.cpp  prob_2_2.cpp  prob_2_3.cpp  prob_2_4.cpp  prob_2_5.cpp
semester-1/Lab_cpp/LAB_2 class Array/: Array.h  demo_input.txt  demo_input_char.txt  demo_input_double.txt  demo_input_string.txt  demo_main.cpp  demo_main_char.cpp  demo_main_double.cpp  demo_main_string.cpp  input.txt  prob_2_1.cpp  prob_2_2.cpp  prob_2_3.cpp  prob_2_4.cpp  prob_2_5.cpp
semester-1/Lab_cpp/LAB_2 copy/: input_2_2.txt  input_2_4.txt  prob_2_1.cpp  prob_2_2.cpp  prob_2_3.cpp  prob_2_4.cpp  prob_2_5.cpp
semester-1/Lab_cpp/LAB_2_arr_ABC/: file_1.cpp  file_2.cpp  file_3.cpp  file_4.cpp  file_5.cpp  file_7.cpp  file_8.cpp  file_9.cpp  file_A_1.cpp  file_A_2.cpp  file_A_3.cpp
semester-1/Lab_cpp/LAB_3/: prob_3_1.cpp  prob_3_2.cpp  prob_3_3.cpp  prob_3_4.cpp  prob_3_5.cpp
semester-1/Lab_cpp/LAB_5/: list_of_students.txt  prob_5_1.cpp  (+2 more)
semester-2/Abstruct_conteiner/: Container.h  main.cpp
semester-2/Qt projects/qt-lab-4/: CMakeLists.txt  for_task_1.txt  for_task_2.txt  for_task_3.txt  for_task_4.txt  for_task_5.txt  problem1.cpp  problem2.cpp  problem3.cpp  problem4.cpp  problem5.cpp
semester-2/class Graph/: INPUT.TXT  main.cpp
semester-2/class q/: MyList.cpp  main.cpp
semester-2/semester-2-summer-practice/: README.md
semester-3/: README.md
(+166 files in other folders)
